# lumiskin

./: .gitignore  README.md  start.sh
backend/: .env.example  alembic.ini  main.py  preview.db  pyproject.toml  requirements.txt  start.sh
backend/.cache/matplotlib/: fontlist-v390.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/api/: deps.py
backend/api/v1/: analyses.py  auth.py  history.py  questionnaires.py  recommendations.py  router.py  uploads.py
backend/controllers/: __init__.py  analysis_controller.py  photo_controller.py
backend/core/: config.py  security.py
backend/cv_service/: main.py  requirements.txt
backend/cv_service/api/: routes.py
backend/cv_service/core/: config.py
backend/cv_service/models/: schemas.py
backend/cv_service/vision/: face.py  features.py  image_io.py  pipeline.py  preprocessing.py  regions.py  (+1 more)
backend/db/: session.py
backend/models/: __init__.py  analysis.py  photo.py  questionnaire.py  recommendation.py  user.py
backend/schemas/: analysis.py  auth.py  history.py  photo.py  questionnaire.py  recommendation.py  recommendation_engine.py  skin_analysis.py  user.py
backend/scripts/: init_local_db.py
backend/services/: analysis_service.py  apple_auth_service.py  auth_service.py  history_service.py  image_storage_service.py  openai_service.py  photo_service.py  product_catalog.py  questionnaire_service.py  recommendation_engine.py  recommendation_service.py  s3_service.py
backend/tests/: conftest.py  test_auth.py  test_recommendation_engine.py  test_skincare_flow.py
(+39 files in other folders)
