[project]
name = "skincare-analysis-backend"
version = "0.1.0"
description = "FastAPI backend for AI-powered skincare analysis."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.34.160",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.112.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "pwdlib[argon2]>=0.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["api*", "core*", "cv_service*", "db*", "models*", "schemas*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
